<resources>
    <string name="app_name">ClassTable</string>
    <string name="classtable_toolbar_string_setting">设置</string>
    <string name="classtable_monday">周一</string>
    <string name="classtable_tur">周二</string>
    <string name="classtable_wen">周三</string>
    <string name="classtable_th">周四</string>
    <string name="classtable_friday">周五</string>
    <string name="classtable_sat">周六</string>
    <string name="classtable_sun">周日</string>
    <string name="HUBLogin">HUB登陆</string>
    <string name="classtable_login">登陆</string>
    <string-array name="ing_login_hub">
        <item>正在登陆HUB.</item>
        <item>正在登陆HUB..</item>
        <item>正在登陆HUB...</item>
        <item>正在登陆HUB....</item>
        <item>正在登陆HUB.....</item>
    </string-array>
    <string name="wrong_account_or_password">用户名或密码错误，请重新输入</string>
    <string-array name="ing_parser_class">
        <item>正在导入课表.</item>
        <item>正在导入课表..</item>
        <item>正在导入课表...</item>
        <item>正在导入课表....</item>
        <item>正在导入课表.....</item>
    </string-array>
    <string name="classtable_classtable">课程表</string>
    <string name="classtable_show_all_classes">显示全部课程</string>
    <string name="classtable_setting_page_content_notification">明日课程通知</string>
    <string name="classtable_setting_page_content_notification_text">开启后会在每晚9点30发送通知提醒明天所要上的的课程</string>
    <string name="classtable_notification_title">明天的课程</string>
    <string name="classtable_cengke">蹭课</string>
    <string name="classtable_add_button_page_get_from_hub">HUB导入</string>
    <string name="classtable_add_button_page_text_add_by_myself">手动添加</string>
    <string name="classtable_add_class">添加课程</string>
    <string name="classtable_ok">确定</string>
    <string name="classtable_select_weeks">选择周次</string>
    <string name="classtable_select_section">选择上课节次</string>
    <string name="classtable_class_address">地点</string>
    <string name="add_new_class_time">新的时间段</string>
    <string name="classtable_delete_class_time">删除</string>
    <string name="classtable_another_time">其他时段</string>
    <string name="classtable_select_week">选择周数</string>
    <string name="classtable_cancle">取消</string>
    <string name="classtable_class_name_is_null">课程名不能为null哦</string>
    <string name="classtable_not_exist_useful_time">没有一个可用的时间-_-//</string>
    <string name="classtable_add_class_success">添加成功!</string>
    <string name="classtable_add_class_failed">添加失败，没内存了吧-_-\\\\</string>
    <string name="classtable_class_detail_info">课程信息</string>
    <string name="classtable_teacher">老师</string>
    <string name="classtable_classname">课程名称</string>
    <string name="classtable_teacher_name">任课教师</string>
    <string name="classtable_go_to_class_time">上课时间</string>
    <string name="input_class_address">输入上课地点</string>
</resources>