<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/classtable_theme_color"
    android:layout_height="@dimen/classtable_class_page_toolbar_height">
    <RelativeLayout
        android:id="@+id/classtable_toolbar_rela_back"
        android:layout_width="wrap_content"
        android:padding="8dp"
        android:onClick="true"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/classtable_setting_page_img"
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/classtable_arrows_left"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginLeft="4dp"
            android:text="@string/classtable_classtable"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/classtable_setting_page_img"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classtable_class_detail_info"
        android:textColor="@color/white"
        android:layout_centerInParent="true"
        android:textSize="20sp"/>

    <RelativeLayout
        android:id="@+id/classtable_toolbar_rela_delete"
        android:clickable="true"
        android:layout_width="60dp"
        android:layout_alignParentRight="true"
        android:padding="8dp"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/classtable_toolbar_tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classtable_delete_class_time"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:textSize="18sp"/>
    </RelativeLayout>
</RelativeLayout>
