<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/classtable_select_class_dialog_rela_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/classtable_dialog_transparent_background">

    <LinearLayout
        android:id="@+id/classtable_select_class_dialog_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/select_class_week_dialog_shape"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/classtable_select_week" />

        <com.ylq.library.classtable.widget.SelectWeekView
            android:id="@+id/classtable_select_class_dialog_selectweekview"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/classtable_select_class_dialog_divide_line_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/classtable_select_class_dialog_text_cancle"
                style="@style/classtable_select_class_dialog_text_style"
                android:layout_height="45dp"
                android:background="@drawable/select_week_dialog_left_button_selector"
                android:text="@string/classtable_cancle"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/classtable_select_class_dialog_divide_line_color"/>
            <TextView
                android:id="@+id/classtable_select_class_dialog_text_ok"
                style="@style/classtable_select_class_dialog_text_style"
                android:layout_height="45dp"
                android:background="@drawable/select_week_dialog_right_button_selector"
                android:text="@string/classtable_ok"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

