<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shSwitch="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/classtable_setting_page_content_background"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/classtable_setting_page_content_rela_height"
        android:layout_marginTop="30dp"
        android:background="@color/classtable_setting_page_content_rela_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classtable_show_all_classes"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:textColor="@color/classtable_setting_page_content_rela_text_color"
            android:textSize="18sp"/>
        <com.ylq.library.classtable.widget.ShSwitchView
            android:id="@+id/classtable_setting_page_content_switch_show_all_classes"
            android:layout_width="60dip"
            android:layout_height="40dip"
            shSwitch:shadowSpace="7dip"
            shSwitch:tintColor="@color/classtable_theme_color"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/classtable_setting_page_content_rela_height"
        android:layout_marginTop="26dp"
        android:background="@color/classtable_setting_page_content_rela_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classtable_setting_page_content_notification"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:textColor="@color/classtable_setting_page_content_rela_text_color"
            android:textSize="18sp"/>
        <com.ylq.library.classtable.widget.ShSwitchView
            android:id="@+id/classtable_setting_page_content_switch_notification"
            android:layout_width="60dip"
            android:layout_height="40dip"
            shSwitch:shadowSpace="7dip"
            shSwitch:tintColor="@color/classtable_theme_color"
            android:layout_alignParentRight="true"
            android:layout_marginRight="8dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/classtable_setting_page_content_notification_text"/>
</LinearLayout>